
  * New upstream release, backported to ubuntu intrepid.
  * Unlike the gutsy/hardy packages, the intrepid packages do not
    recommend kpdf.  This is because kpdf (like many other KDE 3
    applications) is no longer shipped with ubuntu.  The intrepid
    packages recommend xpdf instead (which at least provides an
    *external* PDF viewer, if not an embedded viewer).
  * Added a Homepage field to debian/control.
  * Bumped standards-version to 3.8.0 (no changes required).

 -- Ben Burton <bab@debian.org>  Tue, 28 Oct 2008 06:19:50 +1100

regina-normal (4.5-1) unstable; urgency=low

  * New upstream release.

 -- Ben Burton <bab@debian.org>  Sat, 17 May 2008 11:39:33 +1000

regina-normal (4.4-4) unstable; urgency=low

  * Switched to use the default python version, now that boost.python supports
    multiple python versions.  Updated the versioned build-depends on
    libboost-python-dev accordingly.
  * Added a build-depends on python-dev for boost.python, and versioned this
    to ensure that we catch the recent python2.5 transition.
  * Now uses python-support for handling python policy requirements.  The old
    X[BS]-Python-Version control fields have been removed.
  * Properly quoted CFLAGS / CXXFLAGS in debian/rules (closes: #476029).
  * Changed doc-base section from Apps/Math to Science/Mathematics.

 -- Ben Burton <bab@debian.org>  Sat, 19 Apr 2008 11:39:33 +1000

regina-normal (4.4-3) unstable; urgency=low

  * Added an extra #include for gcc-4.3 compatibility (closes: #455296).

 -- Ben Burton <bab@debian.org>  Mon,  3 Mar 2008 19:28:46 +1100

regina-normal (4.4-2) unstable; urgency=low

  * Build with -O0 on arm, since compiler optimisations on arm chipsets can
    lead to a strange failure in the test suite.  The root cause of this
    failure is still being hunted down.
  * Added sanity checks in debian/rules immediately after configure, so we
    don't need to wait an hour to discover that one of the optional pieces