@@ -10,8 +10,8 @@ Package: regina-normal
 Architecture: any
 Section: math
 Depends: ${shlibs:Depends}, ${perl:Depends}, ${python:Depends}
-Recommends: khelpcenter, xpdf
-Suggests: gap, graphviz, konqueror, regina-normal-doc, regina-normal-dev, regina-normal-mpi, snappea
+Recommends: xpdf
+Suggests: gap, graphviz, regina-normal-doc, regina-normal-dev, regina-normal-mpi, snappea
 Description: 3-manifold topology software with normal surface support
  Regina is a suite of mathematical software for 3-manifold topologists.
  It focuses upon the study of 3-manifold triangulations and includes
@@ -71,7 +71,7 @@ Description: MPI utilities for Regina, the 3-manifold topology software
 Package: regina-normal-doc
 Architecture: all
 Section: doc
-Recommends: konqueror
+Recommends: konqueror | www-browser
 Suggests: regina-normal, regina-normal-dev
 Description: API docs for Regina, the 3-manifold topology software
  Regina is a suite of mathematical software for 3-manifold topologists.
