@@ -1,5 +1,18 @@
-Regina for Debian
+Regina for Ubuntu
 -----------------
+
+WARNING:
+
+    Ubuntu has now removed almost all of KDE 3 from their distribution,
+    including in particular the KDE 3.x documentation viewer.  This
+    means that you will not be able to access the users' handbook or
+    the Python reference through Regina's Help menu.
+
+    You can always view the users' handbook online at
+    http://regina.sourceforge.net/docs/ , or you can download it in HTML
+    format from the usual place at http://regina.sourceforge.net/ .
+    The Python reference can be installed directly in HTML format by
+    installing the package regina-normal-doc.
 
 Two main binaries are provided with Regina:
 
@@ -8,10 +21,6 @@ Two main binaries are provided with Regina:
 
 Several other specialised binaries are also provided; see the users'
 handbook for details.
-
-The users' handbook is provided with this package and can be viewed in
-the KDE Help Centre, or by entering the URL 'help:/regina/' directly
-into konqueror.
 
 Sample topology data files and sample Python sessions are provided in
 the directory /usr/share/doc/regina-normal/examples/.
@@ -28,4 +37,4 @@ regina-normal-dev.
 Components of Regina that are designed to run on clusters can be found
 in the separate package regina-normal-mpi.
 
- -- Ben Burton <bab@debian.org>, Fri, 16 Nov 2007 06:26:03 +1100
+ -- Ben Burton <bab@debian.org>, Wed, 10 Dec 2008 21:34:16 +1100
