@@ -20,7 +20,7 @@
 </td></tr>
 <tr><td align="left" valign="middle">
   <a name="contents">
-  <i>Last updated: 10 December 2008</i><br>
+  <i>Last updated: 11 December 2008</i><br>
   <i>Current version: 4.5.1</i>
   </a>
 </td>
@@ -69,6 +69,11 @@
 
 <h2>News</h2>
 
+<i>11 December 2008:</i>
+Packages are now available for the newly-released
+Fedora&nbsp;10 and Ubuntu&nbsp;8.10 (Intrepid Ibex).
+See the <a href="#download">download section</a> for details.
+<p>
 <i>28 October 2008:</i>
 Version 4.5.1 is out, and normal surface enumeration is <i>much</i> faster!
 See the <a href="docs/history.html">release notes</a> for a full list of
@@ -216,7 +221,12 @@ download site</a>.
     <td align="center"><a href="http://downloads.sourceforge.net/regina/regina-normal-4.5.1-1.suse10.3.i586.rpm">Download</a></td>
     <td align="center"><a href="http://downloads.sourceforge.net/regina/regina-normal-4.5.1-1.suse10.3.x86_64.rpm">Download</a></td>
     </tr>
-<tr><td rowspan=3 class="altfirst">Ubuntu</td>
+<tr><td rowspan=4 class="altfirst">Ubuntu</td>
+    <td class="alt">8.10 (intrepid)</td>
+    <td class="alt" align="center"><a href="install/ubuntu-intrepid.html">Download</a></td>
+    <td class="alt" align="center"><a href="install/ubuntu-intrepid.html">Download</a></td>
+    </tr>
+<tr>
     <td class="alt">8.04 LTS (hardy)</td>
     <td class="alt" align="center"><a href="install/ubuntu-hardy.html">Download</a></td>
     <td class="alt" align="center"><a href="install/ubuntu-hardy.html">Download</a></td>
